# template-python-fastapi

./: README.md  pyproject.toml
python_fastapi/validators/: __init__.py
tests/http/: example.http
