[tool.poetry]
name = "template-python-fastapi"
version = "0.1.0"
description = "A Python project template using FastAPI"
authors = ["rahamoha <rahamoha@cisco.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
